fix OCR4all casing in titles

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>OCR4All</title>
+    <title>OCR4all</title>
 </head>
 <body>
 <h1>Tools</h1>
